# Qubx

./: .dockerignore  .gitignore  .readthedocs.yaml  404.html  ACCOUNT_MANAGEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.py  check_style.sh  cliff.toml  debug_ohlc_test.py  entrypoint.sh  hatch_build.py  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json  qubx.code-workspace  test_binance_ohlcv_integration.py  test_ohlcv_mapping.py  test_race_condition_fix.py  update_docs.sh
.claude/commands/: push.md
.claude/skills/: implementing_streaming_indicators.md
.claude/tasks/: 001_ccxt_data_provider_refactoring.md  002_ccxt_testing_architecture_redesign.md  003_qubx_init_template_system.md  004_hyperliquid_support.md  005_hyperliquid_funding_rate_subscription.md  005_textual_ui_enhancements.md  006_release_import_resolution_fixes.md  007_fix_hyperliquid_funding_rate_polling_issues.md  008_fix_ccxt_connector_refactoring_issues.md  009_ccxt_test_migration_plan.md  010_binance_um_bulk_resubscription_issue.md  011_add_is_live_tag_to_emitters.md  012_add_validate_command.md  013_textual_mode_for_qubx_run.md  014_textual_runner_refactoring.md  015_lighter_exchange_connector.md  016_xlighter_data_reader_implementation.md  017_textual_ui_enhancements.md  018_add_textual_dev_mode_and_port_options.md  019_shared_kernel_architecture.md  020_textual_nan_and_textarea.md  021_order_processing_flow_refactoring.md  022_lighter_public_pools_integration.md
.cursor/rules/: poetry-rule.mdc  python.mdc
.github/workflows/: build-publish.yml  ci.yml  claude-code-review.yml  create-tag.yml  e2e-tests.yml  integration-tests.yml  pytest.yml  release.yml
R_ObiTraderStrategy_20250319215317/: ObiTraderStrategy.info  README.md  build.py  config.yml  pyproject.toml
claude/: funding-payment-subscription-validation.md  funding-payments-integration.md  liquidation-subscription-validation.md  liquidations-integration.md
docs/: about.md  deployment.ipynb  index.md  requirements-docs.txt
docs/account-management/: design.md  reconciliation-redesign.canvas  reconciliation-redesign.md  reconciliator-redesign.md
docs/analysis/: reporting.md  visualization.md
docs/backtesting/: management.md  performance-metrics.md  scheduling.md  simulations.md
docs/connectors/: creating-connectors.md  rate-limiting.md
docs/core-concepts/: backtesting-framework.md  data-management.md  release-deployment.md  strategies.md
docs/development/: build-process.md  ccxt-requirements.md  release.md  setup.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/overrides/: main.html
docs/specs/: 2026-07-21-position-episodes-design.md  2026-07-21-position-episodes-impl.md
docs/trading/: control-protocol.md  live-trading.md  paper-trading.md  risk-management.md
docs/tutorials/: data-preparation.md  deployment.ipynb  questdb-setup.md  signal-export.md
en/: index.html  latest  versions.json
en/0.5.7/: index.html  sitemap.xml
en/0.5.8/: 404.html  index.html  requirements-docs.txt  sitemap.xml
en/0.6.0/: 404.html  index.html  sitemap.xml
en/0.6.1/: sitemap.xml
en/0.6.11/: sitemap.xml
en/0.6.14/: sitemap.xml
en/0.6.16/: sitemap.xml
en/0.6.17/: sitemap.xml
en/0.6.19/: sitemap.xml
en/0.6.21/: sitemap.xml
en/0.6.23/: sitemap.xml
en/0.6.24/: sitemap.xml
en/0.6.25/: sitemap.xml
en/0.6.27/: sitemap.xml
en/0.6.29/: sitemap.xml
en/0.6.3/: index.html  sitemap.xml
en/0.6.32/: sitemap.xml
en/0.6.35/: sitemap.xml
en/0.6.36/: sitemap.xml
en/0.6.37/: sitemap.xml
en/0.6.38/: sitemap.xml
en/0.6.4/: sitemap.xml
en/0.6.40/: sitemap.xml
en/0.6.41/: sitemap.xml
en/0.6.42/: sitemap.xml
en/0.6.43/: sitemap.xml
en/0.6.44/: sitemap.xml
en/0.6.47/: sitemap.xml
en/0.6.48/: sitemap.xml
en/0.6.52/: sitemap.xml
en/0.6.54/: sitemap.xml
en/0.6.56/: sitemap.xml
en/0.6.58/: sitemap.xml
en/0.6.59/: sitemap.xml
en/0.6.60/: sitemap.xml
en/0.6.62/: sitemap.xml
en/0.6.63/: sitemap.xml
en/0.6.64/: sitemap.xml
en/0.6.65/: sitemap.xml
en/0.6.66/: sitemap.xml
en/0.6.68/: sitemap.xml
en/0.6.71/: sitemap.xml
en/0.6.72/: sitemap.xml
en/0.6.73/: sitemap.xml
en/0.6.74/: sitemap.xml
en/0.6.75/: sitemap.xml
en/0.6.77/: sitemap.xml
en/0.6.78/: sitemap.xml
en/0.6.8/: sitemap.xml
en/0.6.84/: sitemap.xml
en/0.6.85/: sitemap.xml
en/0.6.87/: sitemap.xml
en/0.6.88/: sitemap.xml
en/0.6.90/: sitemap.xml
en/0.6.91/: sitemap.xml
en/0.6.93/: sitemap.xml
en/0.6.94/: sitemap.xml
en/0.6.95/: sitemap.xml
en/0.7.11/: sitemap.xml
en/0.7.12/: sitemap.xml
en/0.7.13/: sitemap.xml
en/0.7.15/: sitemap.xml
en/0.7.17/: sitemap.xml
en/0.7.18/: sitemap.xml
en/0.7.19/: sitemap.xml
en/0.7.22/: sitemap.xml
en/0.7.23/: sitemap.xml
en/0.7.24/: sitemap.xml
en/0.7.26/: sitemap.xml
en/0.7.27/: sitemap.xml
en/0.7.28/: 404.html  index.html  sitemap.xml
en/0.7.29/: sitemap.xml
en/0.7.3/: sitemap.xml
en/0.7.30/: sitemap.xml
en/0.7.31/: sitemap.xml
en/0.7.32/: sitemap.xml
en/0.7.33/: sitemap.xml
en/0.7.35/: 404.html  sitemap.xml
en/0.7.37/: sitemap.xml
en/0.7.39/: sitemap.xml
en/0.7.39-rc.1/: sitemap.xml
en/0.7.4/: sitemap.xml
en/0.7.5/: sitemap.xml
en/0.7.6/: sitemap.xml
en/0.7.7/: sitemap.xml
examples/: generic_series_example.py  metric_emitters_example.py
examples/macd_crossover/: README.md  config.yml  pyproject.toml  variate-parameters.yml
examples/macd_crossover/macd_crossover/indicators/: macd.py
examples/macd_crossover/macd_crossover/models/: macd_crossover.py
scripts/: capture_lighter_samples.py  debug_lighter_account_updates.py  docker-compose.yml  entrypoint.sh  next-version.sh  update_docs.sh
tests/: conftest.py
tests/strategies/macd_crossover/: README.md  config.yml  pyproject.toml
tests/strategies/macd_crossover/models/: macd_crossover.py
tests/strategies/macd_crossover/src/macd_crossover/models/: macd_crossover.py  utils.py
tests/strategies/obi_trader/: README.md  config.yml  pyproject.toml
tests/strategies/obi_trader/models/: obi_trader.py
(+1150 files in other folders)
