[build-system]
requires = [
    "poetry-core>=2.0",
    "setuptools>=61.0",
    "numpy>=1.26.3",
    "cython==3.0.8",
    "toml>=0.10.2",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "Qubx"
version = "0.7.39-rc.1"
description = "Qubx - Quantitative Trading Framework"
authors = [
    { name = "Dmitry Marienko", email = "dmitry.marienko@xlydian.com" },
    { name = "Yuriy Arabskyy", email = "yuriy.arabskyy@xlydian.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=1.26.3,<2",
    "pandas>=2.2.2,<3",
    "pyarrow>=15.0.0,<16",
    "scipy>=1.12.0,<2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6,<1",
    "numba>=0.59.1,<1",
    "sortedcontainers>=2.4.0,<3",
    "ntplib>=0.4.0,<1",
    "python-binance>=1.0.19,<2",
    "ccxt>=4.2.68,<5",
    "pymongo>=4.6.1,<5",
    "redis>=5.2.1,<6",
    "psycopg>=3.1.18,<4",
    "psycopg-binary>=3.1.19,<4",
    "psycopg-pool>=3.2.2,<4",
    "matplotlib>=3.8.4,<4",
    "plotly>=5.22.0,<6",
    "dash>=2.18.2,<3",
    "dash-bootstrap-components>=1.6.0,<2",
    "loguru>=0.7.2,<1",
    "tqdm",
    "importlib-metadata",
    "stackprinter>=0.2.10,<1",
    "pydantic>=2.9.2,<3",
    "python-dotenv>=1.0.0,<2",
    "cython==3.0.8",
    "croniter>=2.0.5,<3",
    "msgspec>=0.18.6,<1",
    "pyyaml>=6.0.2,<7",
    "tabulate>=0.9.0,<1",
    "toml>=0.10.2,<1",
    "gitpython>=3.1.44,<4",
    "jupyter>=1.1.1,<2",
    "jupyter-console>=6.6.3,<7",
    "ipywidgets>=8.1.5,<9",
    "questdb>=2.0.3,<3",
    "orjson>=3.10.15,<4",
    "aiohttp>=3.10.11,<3.11",
    "websockets==15.0.1",
    "qubx-bitfinex-api>=3.0.7,<4",
    "textual-autocomplete>=4.0.0,<5",
    "textual-serve>=1.0.0,<2",
    "rich>=13.9.4,<14",
    "jinja2>=3.1.0,<4",
    "qubx-lighter-api>=0.1.5,<1",
    "uvloop>=0.22.1,<1",
    "textual[syntax]>=6.0.0,<7",
]

[project.optional-dependencies]
# Runtime optional features only (shipped with package)
k8 = ["prometheus-client>=0.21.1,<1"]
hft = ["hftbacktest>=2.2.0,<3"]

[project.scripts]
qubx = "qubx.cli.commands:main"

[project.urls]
Repository = "https://github.com/xLydianSoftware/Qubx"

[tool.poetry]
packages = [{ include = "qubx", from = "src" }]
include = [
    # Compiled extensions must be included in the wheel distributions
    { path = "src/qubx/**/*.so", format = "wheel" },
    { path = "src/qubx/**/*.pyd", format = "wheel" },
    # Include .pxd files for Cython development
    { path = "src/qubx/**/*.pxd", format = "sdist" },
    { path = "src/qubx/**/*.pxd", format = "wheel" },
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E731", "E722", "E741"]

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = ["F405", "F401", "E701", "E402", "F403", "E401", "E702", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
markers = [
    "integration: mark test as requiring external services like Redis",
    "e2e: mark test as requiring external exchange connections and API credentials",
]
addopts = "--disable-warnings"
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
    "ignore:coroutine.*AsyncMockMixin._execute_mock_call.*was never awaited:RuntimeWarning",
]

[dependency-groups]
# Dev/test tools (not shipped with package, only for local development)
dev = [
    "pre-commit>=2.20.0,<3",
    "rust-just>=1.36.0,<2",
    "twine>=5.1.1,<6",
    "ipykernel>=6.29.4,<7",
    "iprogress>=0.4,<1",
    "click>=8.1.7,<9",
    "ipywidgets>=8.1.5,<9",
    "ruff>=0.9.7,<1",
    "pytest-xdist>=3.6.1,<4",
    "nbformat>=5.10.4,<6",
    "markdown==3.7",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.5",
    "mdx-truly-sane-lists==1.3",
    "pymdown-extensions==10.14.3",
    "jinja2==3.1.5",
    "mike==2.1.3",
    "mkdocs-jupyter==0.25.1",
    "debugpy>=1.8.12,<2",
    "py-spy>=0.4.1,<1",
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-mock>=3.12.0,<4",
    "pytest-lazy-fixture>=0.6.3,<1",
    "pytest-cov>=4.1.0,<5",
    "mongomock>=4.3.0,<5",
    "pytest-textual-snapshot>=1.1.0,<2",
    "python-semantic-release>=9.21.0",
]

# Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
tag_format = "v{version}"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "dev"

# Match any other branch for custom releases via `just release-custom`
[tool.semantic_release.branches.other]
match = ".*"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
