# ============================================================
# PROJECT METADATA
# ============================================================
[project]
name = "Qubx"
dynamic = ["version"]
description = "Qubx - Quantitative Trading Framework"
authors = [
    { name = "Dmitry Marienko", email = "dmitry.marienko@xlydian.com" },
    { name = "Yuriy Arabskyy", email = "yuriy.arabskyy@xlydian.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Data & numerics
    "numpy>=1.26.3",
    "pandas>=2.2.2,<3",
    "pyarrow>=15.0.0",
    "scipy>=1.12.0,<2",
    "numba>=0.59.1,<1",
    "sortedcontainers>=2.4.0,<3",
    "joblib>=1.3.0,<2",
    # Logging & diagnostics
    "loguru>=0.7.2,<1",
    "tqdm>=4.66.0,<5",
    "stackprinter>=0.2.10,<1",
    # Config & serialization
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.4.0,<3",
    "python-dotenv>=1.0.0,<2",
    "msgspec>=0.18.6,<1",
    "pyyaml>=6.0.2,<7",
    "toml>=0.10.2,<1",
    "orjson>=3.10.15,<4",
    # Networking & async
    "aiohttp>=3.10.11,<3.11",
    "websockets==15.0.1",
    "uvloop>=0.22.1,<1; sys_platform != 'win32'",
    # Control server
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.34.0,<1",
    # Utilities
    "importlib-metadata",
    "croniter>=2.0.5,<3",
    "tabulate>=0.9.0,<1",
    "gitpython>=3.1.44,<4",
    "ntplib>=0.4.0,<1",
    "jinja2>=3.1.0,<4",
    "rich>=13.9.4,<14",
    "click>=8.1.7,<9",
    "statsmodels>=0.14.6,<1",
    # Database backends
    "pymongo>=4.6.1,<5",
    "redis>=5.2.1,<6",
    "psycopg>=3.1.18,<4",
    "psycopg-binary>=3.1.19,<4",
    "psycopg-pool>=3.2.2,<4",
    "questdb>=2.0.3,<3",
    "duckdb>=1.0.0",
    # Terminal UI
    "textual[syntax]>=6.0.0,<7",
    "textual-autocomplete>=4.0.0,<5",
    "textual-serve>=1.0.0,<2",
    "jupyter-client>=8.0.0,<9",
    "ipykernel>=6.29.0,<7",
    "ipywidgets>=8.1.5,<9",
    # Production monitoring
    "prometheus-client>=0.21.1,<1",
]

[project.urls]
homepage = "https://xlydian.com"
repository = "https://github.com/xLydianSoftware/Qubx"
docs = "https://xlydiansoftware.github.io/Qubx"

[project.scripts]
qubx = "qubx.cli.commands:main"

# ============================================================
# OPTIONAL DEPENDENCIES (`pip install qubx[connectors,...]`)
# ============================================================
[project.optional-dependencies]
# Exchange connectors (ccxt-based)
connectors = ["ccxt>=4.2.68,<5"]
# Binance-specific (historical data utilities)
binance = ["python-binance>=1.0.19,<2"]
# Bitfinex-specific (custom API client)
bitfinex = ["qubx-bitfinex-api>=3.0.7,<4"]
# Visualization & charting
viz = [
    "matplotlib>=3.8.4,<4",
    "plotly>=5.22.0,<6",
    "dash>=2.18.2,<3",
    "dash-bootstrap-components>=1.6.0,<2",
]
# Jupyter integration
jupyter = [
    "jupyter>=1.1.1,<2",
    "jupyter-console>=6.6.3,<7",
]

# ============================================================
# BUILD SYSTEM
# ============================================================
[build-system]
requires = [
    "hatchling>=1.21.0",
    "hatch-vcs>=0.4.0",
    "setuptools>=61.0",
    "numpy>=1.26.3",
    "cython==3.0.8",
    "toml>=0.10.2",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/qubx/_version.py"

[tool.hatch.build]
packages = ["src/qubx"]
artifacts = ["src/qubx/**/*.so", "src/qubx/**/*.pyd"]

[tool.hatch.build.targets.sdist]
include = ["src/", "scripts/build.py"]
exclude = ["**/__pycache__", "**/*.so", "**/*.pyd", "**/*.c"]
packages = []

[tool.hatch.build.targets.wheel]
packages = ["src/qubx"]
artifacts = ["src/qubx/**/*.so", "src/qubx/**/*.pyd"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/build.py"

# ============================================================
# DEV DEPENDENCIES (installed with `uv sync`, not shipped)
# Use `uv sync --all-extras` or `just install` for full dev setup
# ============================================================
[dependency-groups]
dev = [
    # Testing
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "httpx>=0.27.0,<1",
    "pytest-mock>=3.12.0,<4",
    "pytest-lazy-fixture>=0.6.3,<1",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.6.1,<4",
    "pytest-textual-snapshot>=1.1.0,<2",
    "mongomock>=4.3.0,<5",
    # Linting & formatting
    "ruff>=0.9.7,<1",
    "pre-commit>=2.20.0,<3",
    # Debugging & profiling
    "debugpy>=1.8.12,<2",
    "py-spy>=0.4.1,<1",
    # Jupyter / notebooks
    "ipykernel>=6.29.4,<7",
    "nbformat>=5.10.4,<6",
    # Documentation
    "markdown==3.7",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.5",
    "mdx-truly-sane-lists==1.3",
    "pymdown-extensions==10.14.3",
    "jinja2==3.1.5",
    "mike==2.1.3",
    "mkdocs-jupyter==0.25.1",
    # Build tooling
    "cython==3.0.8",
    # Release tooling
    "rust-just>=1.36.0,<2",
    "twine>=5.1.1,<6",
    "git-cliff>=2.0.0",
]

# ============================================================
# TOOL CONFIGURATION
# ============================================================
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E731", "E722", "E741"]

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = ["F405", "F401", "E701", "E402", "F403", "E401", "E702", "F821", "E731", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
markers = [
    "integration: mark test as requiring external services like Redis",
    "e2e: mark test as requiring external exchange connections and API credentials",
]
addopts = "--disable-warnings"
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
    "ignore:coroutine.*AsyncMockMixin._execute_mock_call.*was never awaited:RuntimeWarning",
]
