[project]
name = "macd-crossover"
version = "0.0.1"
description = "MACD Crossover Strategy"
authors = [{ name = "Yuriy Arabskyy", email = "yuriy.arabskyy@xlydian.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qubx[connectors]>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
