[tool.poetry]
name = "obi_trader"
version = "0.0.1"
description = "OrderBook Imbalance Trading Strategy"
authors = ["Yuriy Arabskyy <yuriy.arabskyy@xlydian.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "models", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
qubx = "^0.5.8" 